--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
-    background: url('https://images.rawpixel.com/image_800/czNmcy1wcml2YXRlL3Jhd3BpeGVsX2ltYWdlcy93ZWJzaXRlX2NvbnRlbnQvbHIvcm0yMThiYXRjaDcta2F0aWUtNTguanBn.jpg') no-repeat center center fixed;
+    background: url('https://www.bhmpics.com/downloads/dark-waves-Wallpapers/23.waves-ripples-dark-hd-wallpapers-free-download.jpg') no-repeat center center fixed;
     background-size: cover;
     color: white;
 }
@@ -79,7 +79,7 @@ nav ul li a {
 }
 
 #ratingSection {
-    font-size: 2em;
+    font-size: 1em;
 }
 
 .fa-star {
@@ -91,17 +91,16 @@ footer {
     background-color: rgba(0, 0, 0, 0.8);
     padding: 20px 0;
     text-align: center;
-    position: fixed;
     bottom: 0;
     width: 100%;
 }
 
 .schedule-content {
-    text-align: left;
+    text-align: center;
     max-width: 800px;
     margin: 0 auto;
     background-color: rgba(0, 0, 0, 0.7);
-    padding: 20px;
+    padding: 15px;
     border-radius: 10px;
 }
 
@@ -123,7 +122,7 @@ footer {
     padding: 15px;
     border: 1px solid #ddd;
     border-radius: 8px;
-    background-color: #f5f5f5;
+    background-color: rgba(0, 0, 0, 0.7);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     max-width: 600px; /* Adjust the maximum width as needed */
 }
@@ -140,7 +139,7 @@ footer {
 }
 
 .daily-routine-table th {
-    background-color: #f2f2f2;
+    background-color: rgba(0, 0, 0, 0.7);
     font-size: 16px;
     font-weight: bold;
     text-align: center;
@@ -153,15 +152,7 @@ footer {
 
 
 
-@keyframes clickAnimation {
-    0% { transform: scale(1); }
-    50% { transform: scale(1.2); }
-    100% { transform: scale(1); }
-}
 
-.animated-click {
-    animation: clickAnimation 0.5s ease;
-}
 
 /* Animation for moving cart */
 @keyframes moveCart {
